@@ -6,14 +6,10 @@ import com.sep490.backendclubmanagement.exception.ResourceNotFoundException;
 import com.sep490.backendclubmanagement.repository.*;
 import com.sep490.backendclubmanagement.service.ClubManagementService;
 
-import org.junit.jupiter.api.BeforeEach;
-import org.junit.jupiter.api.AfterEach;
-import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.*;
 import org.junit.jupiter.api.extension.ExtendWith;
 
-import org.mockito.InjectMocks;
-import org.mockito.Mock;
-import org.mockito.MockedStatic;
+import org.mockito.*;
 import org.mockito.junit.jupiter.MockitoExtension;
 
 import org.springframework.security.core.Authentication;
@@ -55,11 +51,13 @@ class ClubManagementServiceTest {
         securityContextMock.close();
     }
 
+    // ===================== HELPER =====================
     private User mockCurrentUser(Long userId, String email) {
         User u = new User();
         u.setId(userId);
         u.setEmail(email);
         u.setFullName("User " + userId);
+        u.setIsActive(true);
 
         UserDetails ud = mock(UserDetails.class);
         when(ud.getUsername()).thenReturn(email);
@@ -72,11 +70,12 @@ class ClubManagementServiceTest {
         when(ctx.getAuthentication()).thenReturn(authentication);
 
         securityContextMock.when(SecurityContextHolder::getContext).thenReturn(ctx);
-
         when(userRepository.findByEmail(email)).thenReturn(Optional.of(u));
+
         return u;
     }
 
+    // ===================== TESTS =====================
 
     @Test
     void getMyClubs_happyPath() {
@@ -84,7 +83,6 @@ class ClubManagementServiceTest {
 
         Semester sem = new Semester();
         sem.setId(5L);
-        sem.setSemesterCode("2024A");
         sem.setIsCurrent(true);
         when(semesterRepository.findCurrentSemester()).thenReturn(Optional.of(sem));
 
@@ -92,7 +90,8 @@ class ClubManagementServiceTest {
         dto.setClubId(1L);
         dto.setClubName("CLB Dev");
 
-        when(clubMembershipRepository.findClubsByUserIdAndSemesterId(user.getId(), sem.getId()))
+        // ✅ MOCK ĐÚNG METHOD MỚI
+        when(clubMembershipRepository.findActiveClubsByUserId(user.getId()))
                 .thenReturn(List.of(dto));
 
         when(roleMembershipRepository.findClubRolesByUserAndClub(user.getId(), 1L, sem.getId()))
@@ -105,33 +104,32 @@ class ClubManagementServiceTest {
         assertEquals(1, result.get(0).getClubRoles().size());
     }
 
-
     @Test
     void getClubManagementDetail_happyPath() {
         User user = mockCurrentUser(10L, "user@example.com");
 
         Semester sem = new Semester();
         sem.setId(5L);
-        sem.setSemesterCode("2024A");
         sem.setIsCurrent(true);
         when(semesterRepository.findCurrentSemester()).thenReturn(Optional.of(sem));
 
-        MyClubDTO clubDto = new MyClubDTO();
-        clubDto.setClubId(1L);
-        clubDto.setClubName("CLB Dev");
+        // ✅ validateUserMembership()
+        MyClubDTO myClub = new MyClubDTO();
+        myClub.setClubId(1L);
+        myClub.setClubName("CLB Dev");
 
-        when(clubMembershipRepository.findClubsByUserIdAndSemesterId(user.getId(), sem.getId()))
-                .thenReturn(List.of(clubDto));
+        when(clubMembershipRepository.findActiveClubsByUserId(user.getId()))
+                .thenReturn(List.of(myClub));
 
         Club club = new Club();
         club.setId(1L);
         club.setClubName("CLB Dev");
         when(clubRepository.findById(1L)).thenReturn(Optional.of(club));
 
-        Team t = new Team();
-        t.setId(100L);
-        t.setTeamName("Ban Truyền thông");
-        when(teamRepository.findAllByClubId(1L)).thenReturn(List.of(t));
+        Team team = new Team();
+        team.setId(100L);
+        team.setTeamName("Ban Truyền thông");
+        when(teamRepository.findAllByClubId(1L)).thenReturn(List.of(team));
 
         TeamMemberDTO member = new TeamMemberDTO();
         member.setUserId(20L);
@@ -139,12 +137,15 @@ class ClubManagementServiceTest {
         when(roleMembershipRepository.findMembersByTeamIdAndSemesterId(100L, sem.getId()))
                 .thenReturn(List.of(member));
 
-        ActivityDTO act1 = new ActivityDTO();
-        act1.setId(1000L);
-        act1.setType("POST");
-        act1.setCreatedAt(LocalDateTime.now());
-        when(postRepository.findActivitiesByAuthorIds(anyList())).thenReturn(List.of(act1));
-        when(newsRepository.findActivitiesByAuthorIds(anyList())).thenReturn(Collections.emptyList());
+        ActivityDTO act = new ActivityDTO();
+        act.setId(1000L);
+        act.setType("POST");
+        act.setCreatedAt(LocalDateTime.now());
+
+        when(postRepository.findActivitiesByAuthorIds(anyList()))
+                .thenReturn(List.of(act));
+        when(newsRepository.findActivitiesByAuthorIds(anyList()))
+                .thenReturn(Collections.emptyList());
 
         ClubDetailDTO result = service.getClubManagementDetail(1L);
 
@@ -154,71 +155,54 @@ class ClubManagementServiceTest {
         assertEquals(1, result.getTeams().get(0).getActivities().size());
     }
 
-
     @Test
     void getClubManagementDetail_notMember_throws() {
         mockCurrentUser(10L, "user@example.com");
 
-        Semester sem = new Semester();
-        sem.setId(5L);
-        sem.setIsCurrent(true);
-        when(semesterRepository.findCurrentSemester()).thenReturn(Optional.of(sem));
-
-        when(clubMembershipRepository.findClubsByUserIdAndSemesterId(anyLong(), eq(sem.getId())))
+        when(clubMembershipRepository.findActiveClubsByUserId(anyLong()))
                 .thenReturn(Collections.emptyList());
 
         assertThrows(ResourceNotFoundException.class,
                 () -> service.getClubManagementDetail(1L));
     }
 
-
     @Test
     void getUserClubRoles_happyPath() {
         Long userId = 10L;
 
+        User u = new User();
+        u.setId(userId);
+        u.setIsActive(true);
+        when(userRepository.findById(userId)).thenReturn(Optional.of(u));
+
         Semester sem = new Semester();
         sem.setId(5L);
-        sem.setSemesterCode("2024A");
         sem.setIsCurrent(true);
         sem.setStartDate(LocalDate.now().minusDays(1));
         sem.setEndDate(LocalDate.now().plusDays(1));
         when(semesterRepository.findCurrentSemester()).thenReturn(Optional.of(sem));
 
-        MyClubDTO clubDto = new MyClubDTO();
-        clubDto.setClubId(1L);
-        clubDto.setClubName("CLB Dev");
-
-        when(clubMembershipRepository.findClubsByUserIdAndSemesterId(userId, sem.getId()))
-                .thenReturn(List.of(clubDto));
-
-        // 🔥==> THÊM PHẦN NÀY
-        User u = new User();
-        u.setId(userId);
-        u.setFullName("User 10");
-        when(userRepository.findById(userId)).thenReturn(Optional.of(u));
-        // <==🔥
-
-        ClubMemberShip cms = new ClubMemberShip();
-        cms.setId(100L);
         Club club = new Club();
         club.setId(1L);
         club.setClubName("CLB Dev");
+
+        ClubMemberShip cms = new ClubMemberShip();
+        cms.setId(100L);
+        cms.setUser(u);
         cms.setClub(club);
         cms.setStatus(ClubMemberShipStatus.ACTIVE);
 
-        when(clubMembershipRepository.findByClubIdAndUserId(1L, userId))
-                .thenReturn(cms);
+        when(clubMembershipRepository.findActiveClubMembershipsByUserId(userId))
+                .thenReturn(List.of(cms));
 
         RoleMemberShip rm = new RoleMemberShip();
-        rm.setId(200L);
         ClubRole cr = new ClubRole();
-        cr.setId(300L);
         cr.setRoleName("Chủ nhiệm");
 
         SystemRole sr = new SystemRole();
         sr.setRoleName("CLUB_PRESIDENT");
-
         cr.setSystemRole(sr);
+
         rm.setClubRole(cr);
 
         when(roleMembershipRepository.findByClubMemberShipIdAndSemesterIdAndIsActiveWithFetch(
@@ -232,5 +216,4 @@ class ClubManagementServiceTest {
         assertEquals("Chủ nhiệm", roles.get(0).getClubRole());
         assertEquals("CLUB_PRESIDENT", roles.get(0).getSystemRole());
     }
-
 }
